# spacy-stemmer

./: LICENSE  README.md  pyproject.toml  spacy_stemmer.py
